[package]
name = "toy_prng"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_pcg = { version = "0.3", optional = true }
rand_xorshift = { version = "0.3", optional = true }
bevy = { workspace = true }


[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
locking = []

[dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ] }

[[bench]]
name = "random"
harness = false